@@ -1,3 +1,6 @@
+r116 (03. 01. 2023):
+Enemy Counter: Fixed a crash when option "Show enemies with pager (stealth)" is enabled
+
 r115 (02. 01. 2023):
 Added option "Show enemies with pager (stealth)"
 Inventory: Fixed missing strings in Sicario
